modified style sheet

--- a/main.css
+++ b/main.css
@@ -2,10 +2,7 @@ body {
     background-color: lightblue;
 } 
 
-.sloth {
-	float: right;
-}
-.sloth img {
-	width: 300px;
+.search {
 
+	padding-left: 40px;
 }
